--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-grid-system": "^6.4.2",
     "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.1",
+    "react-sticky-footer": "0.1.0-rc3",
     "reactjs-popup": "^1.5.0"
   },
   "scripts": {
