--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.1",
     "react-sticky-footer": "0.1.0-rc3",
+    "react-timecode": "^1.1.23",
     "reactjs-popup": "^1.5.0"
   },
   "scripts": {
